--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -56,10 +56,12 @@
     <PackageReference Include="Krafs.Rimworld.Ref">
       <Version>1.4.3641</Version>
     </PackageReference>
+    <PackageReference Include="krafs.RimWorld.ref" Version="1.4.3641" />
     <PackageReference Include="Lib.Harmony">
       <Version>2.2.2</Version>
       <ExcludeAssets>Runtime</ExcludeAssets>
     </PackageReference>
+    <PackageReference Include="Lib.Harmony" Version="2.2.2" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="AlienRace">
