CustomXmlLoad for StudentDef.skills StudentSkillLayout

--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -44,12 +44,12 @@
     <Compile Include="Patch\HarmonyPatch.cs" />
     <Compile Include="RimArchive.cs" />
     <Compile Include="SchoolNameModExtension.cs" />
-    <Compile Include="StudentDefOf.cs" />
+    <Compile Include="Defs\DefOfs\StudentDefOf.cs" />
     <Compile Include="RAFaction.cs" />
-    <Compile Include="moe_bombardment.cs" />
+    <Compile Include="Verbs\moe_bombardment.cs" />
     <Compile Include="BA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SchoolDefOf.cs" />
+    <Compile Include="Defs\DefOfs\SchoolDefOf.cs" />
     <Compile Include="Window\RecruitWindow.cs" />
   </ItemGroup>
   <ItemGroup>
