--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 v1.4/Source export-ignore
 README.md export-ignore
 .gitignore export-ignore
-.gitattribute export-ignore
+.gitattributes export-ignore
