Squashed commit of the following:
commit 59725903e992f0633ce2c9e6f922acc2b4310d5f
Author: Masakitenchi <fucong119@gmail.com>
Date:   Wed Mar 22 20:25:47 2023 +0900

    Intial Test Commit. Azusa

commit 5475ca528805db1eb7b03317872f310b30ca52f5
Author: Masakitenchi <fucong119@gmail.com>
Date:   Fri Mar 17 14:34:27 2023 +0900

    Added Azusa for test

--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -39,8 +39,11 @@
     <Compile Include="Components\RimArchiveGameComponent.cs" />
     <Compile Include="Components\RimArchiveWorldComponent.cs" />
     <Compile Include="Debug.cs" />
+    <Compile Include="Defs\DefOfs\HediffDefOf.cs" />
     <Compile Include="Defs\IconDef.cs" />
     <Compile Include="Defs\StudentDef.cs" />
+    <Compile Include="Hediff\Comps\HediffComp_ArmorReduction.cs" />
+    <Compile Include="Hediff\HediffCompProperties_ArmorReduction.cs" />
     <Compile Include="HotSwap.cs" />
     <Compile Include="Patch\HarmonyPatch.cs" />
     <Compile Include="RimArchive.cs" />
@@ -67,6 +70,10 @@
   <ItemGroup>
     <Reference Include="AlienRace">
       <HintPath>..\..\..\..\..\..\..\SteamLibrary\steamapps\workshop\content\294100\839005762\1.4\Assemblies\AlienRace.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="CombatExtended">
+      <HintPath>..\..\..\..\..\..\..\SteamLibrary\steamapps\workshop\content\294100\2890901044\Assemblies\CombatExtended.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
