档案系统更新

--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -77,6 +77,8 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Abilities\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
