Pillar update: when "damaged", reset its expanding timer

--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Hediff\HediffCompProperties_ArmorReduction.cs" />
     <Compile Include="HotSwap.cs" />
     <Compile Include="Patch\HarmonyPatch.cs" />
+    <Compile Include="Patch\Harmony_CE.cs" />
     <Compile Include="PawnRelation\PawnRelationWorker_SameClub.cs" />
     <Compile Include="PawnRelation\PawnRelationWorker_Sibling.cs" />
     <Compile Include="RimArchive.cs" />
