Boss group bug Fixes #4 Only temp fix. Will find a workaround for one ticket -> multiple bosses

--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Compile Include="Abilities\Comps\CompAbilityEffect_PowerBeam.cs" />
     <Compile Include="Abilities\Verb_StraightBeam.cs" />
-    <Compile Include="Boss\BossgroupDef.cs" />
+    <Compile Include="Boss\RaidDef.cs" />
     <Compile Include="Boss\BossGroupWorker.cs" />
     <Compile Include="Components\RimArchiveWorldComponent.cs" />
     <Compile Include="Debug.cs" />
