--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -13,6 +13,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
@@ -42,6 +43,7 @@
     <Compile Include="Abilities\Verb_StraightBeam.cs" />
     <Compile Include="Boss\RaidDef.cs" />
     <Compile Include="Boss\BossGroupWorker.cs" />
+    <Compile Include="Boss\RaidGroupWave.cs" />
     <Compile Include="Components\RimArchiveWorldComponent.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Defs\BossDef.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="BA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Defs\DefOfs\SchoolDefOf.cs" />
+    <Compile Include="Verbs\Verb_SummonThing.cs" />
     <Compile Include="Window\RecruitWindow.cs" />
   </ItemGroup>
   <ItemGroup>
