--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -6,14 +6,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BAAE6D3E-4D4D-41B1-8F25-5A2BD8F707C7}</ProjectGuid>
     <OutputType>Library</OutputType>
+	  <LangVersion>10.0</LangVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <LangVersion>preview</LangVersion>
     <RootNamespace>RimArchive</RootNamespace>
     <AssemblyName>RimArchive</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
