--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: Build-Test
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
-      main
+      - main
   workflow_dispatch:
   
 
