--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -38,7 +38,7 @@
     </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Abilities\Comps\CompAbilityEffect_PowerBeam.cs" />
+    <!--<Compile Include="Abilities\Comps\CompAbilityEffect_PowerBeam.cs" />
     <Compile Include="Abilities\Verb_StraightBeam.cs" />
     <Compile Include="Boss\RaidDef.cs" />
     <Compile Include="Boss\BossGroupWorker.cs" />
@@ -83,7 +83,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Defs\DefOfs\SchoolDefOf.cs" />
     <Compile Include="Verbs\Verb_SummonThing.cs" />
-    <Compile Include="Window\RecruitWindow.cs" />
+    <Compile Include="Window\RecruitWindow.cs" />-->
+    <Compile Include="**\*.cs" Exclude="obj\**\*.*"/>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.RimWorld.Ref" Version="1.4.3682" />
