Add missing pawn arrival method

--- a/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
+++ b/v1.4/Source/RimArchive/RimArchive/RimArchive.csproj
@@ -120,6 +120,7 @@
     </Reference>
     <Publicize Include="Assembly-CSharp:Verse.StartingPawnUtility.StartingAndOptionalPawns" />
     <Publicize Include="Assembly-CSharp:Verse.StartingPawnUtility.GeneratePossessions" />
+	  <Publicize Include="Assembly-CSharp:Verse.StartingPawnUtility.StartingAndOptionalPawnGenerationRequests" /> 
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
